Minor improvements in help

--- a/Help/Source/Include/Overview.dtx
+++ b/Help/Source/Include/Overview.dtx
@@ -3,7 +3,7 @@
 
 Virtual Treeview is a tree view control built from ground up. More than 3 years of development made it one of the most
 flexible and advanced tree controls available today. Virtual Treeview starts off with the claim to improve many aspects
-\of existing solutions and introduces some new technologies and priniciples which were not available before.
+\of existing solutions and introduces some new technologies and principles which were not available before.
 
 As the name already indicates, this control uses a different paradigm for tree management than other controls of this
 kind. It does not know anything about the data it manages (except its size), not even the captions of a node. Everything
@@ -25,8 +25,8 @@ Virtual Treeview can be characterized by the following core capabilities:
   * <b>Highly customizable</b>.
   * Designed for <b>professionals</b>, implements a <b>virtual paradigm</b> with a <b>new serialization concept</b>.
   * <b>Newest technologies and platforms</b> are supported (e.g. Windows XP).
-  * Unique features like <b>Unicode</b>, <b>right-to-left</b> directionality and layout, <b>alpha blending</b> and <b>OLE</b>
-    drag'n drop and clipboard operations.
+  * Unique features like <b>Unicode</b>, <b>right&#45;to&#45;left</b> directionality and layout, <b>alpha blending</b>
+    and <b>OLE</b> drag'n drop and clipboard operations.
 
 <table noborder>
 <image GenericXP.bmp>
