Minor improvements in help

--- a/Help/Source/VirtualTreeview.dox
+++ b/Help/Source/VirtualTreeview.dox
@@ -12528,69 +12528,75 @@ BodySourceUseAutolinking=1
 BodySourceUseSyntaxHighlight=1
 
 [Configurations\Configuration 1\Disabled Topics]
-Count=62
+Count=68
 ID0=!!GLOSSARY
 ID1=DrawTextW@HDC@PWideChar@Integer@TRect@Cardinal@Boolean
-ID10=TBaseVirtualTree.GetLast@PVirtualNode
-ID11=TBaseVirtualTree.GetLastInitialized@PVirtualNode
-ID12=TBaseVirtualTree.GetLastNoInit@PVirtualNode
-ID13=TBaseVirtualTree.GetLastVisible@PVirtualNode
-ID14=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
-ID15=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
-ID16=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
-ID17=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
-ID18=TBaseVirtualTree.GetNext@PVirtualNode
-ID19=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID10=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
+ID11=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
+ID12=TBaseVirtualTree.FNodeMemoryManager
+ID13=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
+ID14=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
+ID15=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID16=TBaseVirtualTree.GetLast@PVirtualNode
+ID17=TBaseVirtualTree.GetLastInitialized@PVirtualNode
+ID18=TBaseVirtualTree.GetLastNoInit@PVirtualNode
+ID19=TBaseVirtualTree.GetLastVisible@PVirtualNode
 ID2=Introduction PDF
-ID20=TBaseVirtualTree.GetNextInitialized@PVirtualNode
-ID21=TBaseVirtualTree.GetNextNoInit@PVirtualNode
-ID22=TBaseVirtualTree.GetNextSelected@PVirtualNode
-ID23=TBaseVirtualTree.GetNextVisible@PVirtualNode
-ID24=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
-ID25=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
-ID26=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
-ID27=TBaseVirtualTree.GetPrevious@PVirtualNode
-ID28=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
-ID29=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
-ID3=TBaseVirtualTree.AfterConstruction
-ID30=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
-ID31=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
-ID32=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
-ID33=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
-ID34=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
-ID35=TBaseVirtualTree.GetVisibleParent@PVirtualNode
-ID36=TBufferedString
-ID37=TCheckImageKind.ckSystem
-ID38=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
-ID39=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
-ID4=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
-ID40=THeaderState.hsTracking
-ID41=THeaderState.hsTrackPending
-ID42=TOldVTOption
-ID43=TToggleAnimationData.Expand
-ID44=TToggleAnimationData.R
-ID45=TVirtualTreeCast
-ID46=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
-ID47=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
-ID48=TVirtualTreeColumns.Equals@TVirtualTreeColumns
-ID49=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
-ID5=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
-ID50=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
-ID51=TVTHeader.FLeftTrackPos
-ID52=TVTHeaderStyle.hsXPStyle
-ID53=TVTNodeMemoryManager
-ID54=TVTNodeMemoryManager.AllocNode@Cardinal
-ID55=TVTNodeMemoryManager.Clear
-ID56=TVTNodeMemoryManager.FAllocSize
-ID57=TVTNodeMemoryManager.FBlockList
-ID58=TVTNodeMemoryManager.FBytesAvailable
-ID59=TVTNodeMemoryManager.FFreeSpace
-ID6=TBaseVirtualTree.FNodeMemoryManager
-ID60=TVTNodeMemoryManager.FNext
-ID61=TVTNodeMemoryManager.FreeNode@PVirtualNode
-ID7=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
-ID8=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
-ID9=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID20=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
+ID21=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
+ID22=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
+ID23=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
+ID24=TBaseVirtualTree.GetNext@PVirtualNode
+ID25=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID26=TBaseVirtualTree.GetNextInitialized@PVirtualNode
+ID27=TBaseVirtualTree.GetNextNoInit@PVirtualNode
+ID28=TBaseVirtualTree.GetNextSelected@PVirtualNode
+ID29=TBaseVirtualTree.GetNextVisible@PVirtualNode
+ID3=PByte
+ID30=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
+ID31=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
+ID32=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
+ID33=TBaseVirtualTree.GetPrevious@PVirtualNode
+ID34=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
+ID35=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
+ID36=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
+ID37=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
+ID38=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
+ID39=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
+ID4=PClipboardFormatListEntry
+ID40=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
+ID41=TBaseVirtualTree.GetVisibleParent@PVirtualNode
+ID42=TBufferedString
+ID43=TCheckImageKind.ckSystem
+ID44=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
+ID45=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
+ID46=THeaderState.hsTracking
+ID47=THeaderState.hsTrackPending
+ID48=TOldVTOption
+ID49=TToggleAnimationData.Expand
+ID5=PSHDragImage
+ID50=TToggleAnimationData.R
+ID51=TVirtualTreeCast
+ID52=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
+ID53=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
+ID54=TVirtualTreeColumns.Equals@TVirtualTreeColumns
+ID55=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
+ID56=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
+ID57=TVTHeader.FLeftTrackPos
+ID58=TVTHeaderStyle.hsXPStyle
+ID59=TVTNodeMemoryManager
+ID6=PVTHintData
+ID60=TVTNodeMemoryManager.AllocNode@Cardinal
+ID61=TVTNodeMemoryManager.Clear
+ID62=TVTNodeMemoryManager.FAllocSize
+ID63=TVTNodeMemoryManager.FBlockList
+ID64=TVTNodeMemoryManager.FBytesAvailable
+ID65=TVTNodeMemoryManager.FFreeSpace
+ID66=TVTNodeMemoryManager.FNext
+ID67=TVTNodeMemoryManager.FreeNode@PVirtualNode
+ID7=PVTReference
+ID8=PVTVirtualNodeEnumeration
+ID9=TBaseVirtualTree.AfterConstruction
 
 [Configurations\Configuration 1\Enabled Topics]
 Count=4
