Minor improvements in help

--- a/Help/Source/VirtualTreeview.dox
+++ b/Help/Source/VirtualTreeview.dox
@@ -12599,7 +12599,7 @@ ID8=PVTVirtualNodeEnumeration
 ID9=TBaseVirtualTree.AfterConstruction
 
 [Configurations\Configuration 1\Enabled Topics]
-Count=4
+Count=7
 ID0=!!FUNCTIONS
 ID1=!!INTERFACES
 ID2=TVTDataObject
@@ -25890,70 +25890,76 @@ BodySourceUseAutolinking=1
 BodySourceUseSyntaxHighlight=1
 
 [Configurations\Configuration 2\Disabled Topics]
-Count=63
+Count=69
 ID0=!!GLOSSARY
 ID1=DrawTextW@HDC@PWideChar@Integer@TRect@Cardinal@Boolean
-ID10=TBaseVirtualTree.GetImageIndex@PVirtualNode@TVTImageKind@TColumnIndex@Boolean
-ID11=TBaseVirtualTree.GetLast@PVirtualNode
-ID12=TBaseVirtualTree.GetLastInitialized@PVirtualNode
-ID13=TBaseVirtualTree.GetLastNoInit@PVirtualNode
-ID14=TBaseVirtualTree.GetLastVisible@PVirtualNode
-ID15=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
-ID16=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
-ID17=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
-ID18=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
-ID19=TBaseVirtualTree.GetNext@PVirtualNode
+ID10=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
+ID11=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
+ID12=TBaseVirtualTree.FNodeMemoryManager
+ID13=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
+ID14=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
+ID15=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID16=TBaseVirtualTree.GetImageIndex@PVirtualNode@TVTImageKind@TColumnIndex@Boolean
+ID17=TBaseVirtualTree.GetLast@PVirtualNode
+ID18=TBaseVirtualTree.GetLastInitialized@PVirtualNode
+ID19=TBaseVirtualTree.GetLastNoInit@PVirtualNode
 ID2=Introduction PDF
-ID20=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
-ID21=TBaseVirtualTree.GetNextInitialized@PVirtualNode
-ID22=TBaseVirtualTree.GetNextNoInit@PVirtualNode
-ID23=TBaseVirtualTree.GetNextSelected@PVirtualNode
-ID24=TBaseVirtualTree.GetNextVisible@PVirtualNode
-ID25=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
-ID26=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
-ID27=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
-ID28=TBaseVirtualTree.GetPrevious@PVirtualNode
-ID29=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
-ID3=TBaseVirtualTree.AfterConstruction
-ID30=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
-ID31=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
-ID32=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
-ID33=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
-ID34=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
-ID35=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
-ID36=TBaseVirtualTree.GetVisibleParent@PVirtualNode
-ID37=TBufferedString
-ID38=TCheckImageKind.ckSystem
-ID39=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
-ID4=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
-ID40=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
-ID41=THeaderState.hsTracking
-ID42=THeaderState.hsTrackPending
-ID43=TOldVTOption
-ID44=TToggleAnimationData.Expand
-ID45=TToggleAnimationData.R
-ID46=TVirtualTreeCast
-ID47=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
-ID48=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
-ID49=TVirtualTreeColumns.Equals@TVirtualTreeColumns
-ID5=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
-ID50=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
-ID51=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
-ID52=TVTHeader.FLeftTrackPos
-ID53=TVTHeaderStyle.hsXPStyle
-ID54=TVTNodeMemoryManager
-ID55=TVTNodeMemoryManager.AllocNode@Cardinal
-ID56=TVTNodeMemoryManager.Clear
-ID57=TVTNodeMemoryManager.FAllocSize
-ID58=TVTNodeMemoryManager.FBlockList
-ID59=TVTNodeMemoryManager.FBytesAvailable
-ID6=TBaseVirtualTree.FNodeMemoryManager
-ID60=TVTNodeMemoryManager.FFreeSpace
-ID61=TVTNodeMemoryManager.FNext
-ID62=TVTNodeMemoryManager.FreeNode@PVirtualNode
-ID7=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
-ID8=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
-ID9=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID20=TBaseVirtualTree.GetLastVisible@PVirtualNode
+ID21=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
+ID22=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
+ID23=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
+ID24=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
+ID25=TBaseVirtualTree.GetNext@PVirtualNode
+ID26=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID27=TBaseVirtualTree.GetNextInitialized@PVirtualNode
+ID28=TBaseVirtualTree.GetNextNoInit@PVirtualNode
+ID29=TBaseVirtualTree.GetNextSelected@PVirtualNode
+ID3=PByte
+ID30=TBaseVirtualTree.GetNextVisible@PVirtualNode
+ID31=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
+ID32=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
+ID33=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
+ID34=TBaseVirtualTree.GetPrevious@PVirtualNode
+ID35=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
+ID36=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
+ID37=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
+ID38=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
+ID39=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
+ID4=PClipboardFormatListEntry
+ID40=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
+ID41=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
+ID42=TBaseVirtualTree.GetVisibleParent@PVirtualNode
+ID43=TBufferedString
+ID44=TCheckImageKind.ckSystem
+ID45=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
+ID46=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
+ID47=THeaderState.hsTracking
+ID48=THeaderState.hsTrackPending
+ID49=TOldVTOption
+ID5=PSHDragImage
+ID50=TToggleAnimationData.Expand
+ID51=TToggleAnimationData.R
+ID52=TVirtualTreeCast
+ID53=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
+ID54=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
+ID55=TVirtualTreeColumns.Equals@TVirtualTreeColumns
+ID56=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
+ID57=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
+ID58=TVTHeader.FLeftTrackPos
+ID59=TVTHeaderStyle.hsXPStyle
+ID6=PVTHintData
+ID60=TVTNodeMemoryManager
+ID61=TVTNodeMemoryManager.AllocNode@Cardinal
+ID62=TVTNodeMemoryManager.Clear
+ID63=TVTNodeMemoryManager.FAllocSize
+ID64=TVTNodeMemoryManager.FBlockList
+ID65=TVTNodeMemoryManager.FBytesAvailable
+ID66=TVTNodeMemoryManager.FFreeSpace
+ID67=TVTNodeMemoryManager.FNext
+ID68=TVTNodeMemoryManager.FreeNode@PVirtualNode
+ID7=PVTReference
+ID8=PVTVirtualNodeEnumeration
+ID9=TBaseVirtualTree.AfterConstruction
 
 [Configurations\Configuration 2\Enabled Topics]
 Count=4
@@ -39247,69 +39253,75 @@ BodySourceUseAutolinking=1
 BodySourceUseSyntaxHighlight=1
 
 [Configurations\Configuration 3\Disabled Topics]
-Count=62
+Count=68
 ID0=!!GLOSSARY
 ID1=DrawTextW@HDC@PWideChar@Integer@TRect@Cardinal@Boolean
-ID10=TBaseVirtualTree.GetLast@PVirtualNode
-ID11=TBaseVirtualTree.GetLastInitialized@PVirtualNode
-ID12=TBaseVirtualTree.GetLastNoInit@PVirtualNode
-ID13=TBaseVirtualTree.GetLastVisible@PVirtualNode
-ID14=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
-ID15=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
-ID16=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
-ID17=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
-ID18=TBaseVirtualTree.GetNext@PVirtualNode
-ID19=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID10=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
+ID11=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
+ID12=TBaseVirtualTree.FNodeMemoryManager
+ID13=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
+ID14=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
+ID15=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID16=TBaseVirtualTree.GetLast@PVirtualNode
+ID17=TBaseVirtualTree.GetLastInitialized@PVirtualNode
+ID18=TBaseVirtualTree.GetLastNoInit@PVirtualNode
+ID19=TBaseVirtualTree.GetLastVisible@PVirtualNode
 ID2=Introduction PDF
-ID20=TBaseVirtualTree.GetNextInitialized@PVirtualNode
-ID21=TBaseVirtualTree.GetNextNoInit@PVirtualNode
-ID22=TBaseVirtualTree.GetNextSelected@PVirtualNode
-ID23=TBaseVirtualTree.GetNextVisible@PVirtualNode
-ID24=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
-ID25=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
-ID26=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
-ID27=TBaseVirtualTree.GetPrevious@PVirtualNode
-ID28=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
-ID29=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
-ID3=TBaseVirtualTree.AfterConstruction
-ID30=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
-ID31=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
-ID32=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
-ID33=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
-ID34=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
-ID35=TBaseVirtualTree.GetVisibleParent@PVirtualNode
-ID36=TBufferedString
-ID37=TCheckImageKind.ckSystem
-ID38=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
-ID39=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
-ID4=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
-ID40=THeaderState.hsTracking
-ID41=THeaderState.hsTrackPending
-ID42=TOldVTOption
-ID43=TToggleAnimationData.Expand
-ID44=TToggleAnimationData.R
-ID45=TVirtualTreeCast
-ID46=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
-ID47=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
-ID48=TVirtualTreeColumns.Equals@TVirtualTreeColumns
-ID49=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
-ID5=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
-ID50=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
-ID51=TVTHeader.FLeftTrackPos
-ID52=TVTHeaderStyle.hsXPStyle
-ID53=TVTNodeMemoryManager
-ID54=TVTNodeMemoryManager.AllocNode@Cardinal
-ID55=TVTNodeMemoryManager.Clear
-ID56=TVTNodeMemoryManager.FAllocSize
-ID57=TVTNodeMemoryManager.FBlockList
-ID58=TVTNodeMemoryManager.FBytesAvailable
-ID59=TVTNodeMemoryManager.FFreeSpace
-ID6=TBaseVirtualTree.FNodeMemoryManager
-ID60=TVTNodeMemoryManager.FNext
-ID61=TVTNodeMemoryManager.FreeNode@PVirtualNode
-ID7=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
-ID8=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
-ID9=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID20=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
+ID21=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
+ID22=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
+ID23=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
+ID24=TBaseVirtualTree.GetNext@PVirtualNode
+ID25=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID26=TBaseVirtualTree.GetNextInitialized@PVirtualNode
+ID27=TBaseVirtualTree.GetNextNoInit@PVirtualNode
+ID28=TBaseVirtualTree.GetNextSelected@PVirtualNode
+ID29=TBaseVirtualTree.GetNextVisible@PVirtualNode
+ID3=PByte
+ID30=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
+ID31=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
+ID32=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
+ID33=TBaseVirtualTree.GetPrevious@PVirtualNode
+ID34=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
+ID35=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
+ID36=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
+ID37=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
+ID38=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
+ID39=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
+ID4=PClipboardFormatListEntry
+ID40=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
+ID41=TBaseVirtualTree.GetVisibleParent@PVirtualNode
+ID42=TBufferedString
+ID43=TCheckImageKind.ckSystem
+ID44=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
+ID45=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
+ID46=THeaderState.hsTracking
+ID47=THeaderState.hsTrackPending
+ID48=TOldVTOption
+ID49=TToggleAnimationData.Expand
+ID5=PSHDragImage
+ID50=TToggleAnimationData.R
+ID51=TVirtualTreeCast
+ID52=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
+ID53=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
+ID54=TVirtualTreeColumns.Equals@TVirtualTreeColumns
+ID55=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
+ID56=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
+ID57=TVTHeader.FLeftTrackPos
+ID58=TVTHeaderStyle.hsXPStyle
+ID59=TVTNodeMemoryManager
+ID6=PVTHintData
+ID60=TVTNodeMemoryManager.AllocNode@Cardinal
+ID61=TVTNodeMemoryManager.Clear
+ID62=TVTNodeMemoryManager.FAllocSize
+ID63=TVTNodeMemoryManager.FBlockList
+ID64=TVTNodeMemoryManager.FBytesAvailable
+ID65=TVTNodeMemoryManager.FFreeSpace
+ID66=TVTNodeMemoryManager.FNext
+ID67=TVTNodeMemoryManager.FreeNode@PVirtualNode
+ID7=PVTReference
+ID8=PVTVirtualNodeEnumeration
+ID9=TBaseVirtualTree.AfterConstruction
 
 [Configurations\Configuration 3\Enabled Topics]
 Count=4
@@ -44253,69 +44265,75 @@ BodySourceUseAutolinking=1
 BodySourceUseSyntaxHighlight=1
 
 [Configurations\Configuration 4\Disabled Topics]
-Count=62
+Count=68
 ID0=!!GLOSSARY
 ID1=DrawTextW@HDC@PWideChar@Integer@TRect@Cardinal@Boolean
-ID10=TBaseVirtualTree.GetLast@PVirtualNode
-ID11=TBaseVirtualTree.GetLastInitialized@PVirtualNode
-ID12=TBaseVirtualTree.GetLastNoInit@PVirtualNode
-ID13=TBaseVirtualTree.GetLastVisible@PVirtualNode
-ID14=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
-ID15=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
-ID16=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
-ID17=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
-ID18=TBaseVirtualTree.GetNext@PVirtualNode
-ID19=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
-ID2=TBaseVirtualTree.AfterConstruction
-ID20=TBaseVirtualTree.GetNextInitialized@PVirtualNode
-ID21=TBaseVirtualTree.GetNextNoInit@PVirtualNode
-ID22=TBaseVirtualTree.GetNextSelected@PVirtualNode
-ID23=TBaseVirtualTree.GetNextVisible@PVirtualNode
-ID24=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
-ID25=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
-ID26=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
-ID27=TBaseVirtualTree.GetPrevious@PVirtualNode
-ID28=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
-ID29=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
-ID3=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
-ID30=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
-ID31=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
-ID32=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
-ID33=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
-ID34=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
-ID35=TBaseVirtualTree.GetVisibleParent@PVirtualNode
-ID36=TBufferedString
-ID37=TCheckImageKind.ckSystem
-ID38=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
-ID39=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
-ID4=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
-ID40=THeaderState.hsTracking
-ID41=THeaderState.hsTrackPending
-ID42=TOldVTOption
-ID43=TToggleAnimationData.Expand
-ID44=TToggleAnimationData.R
-ID45=TVirtualTreeCast
-ID46=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
-ID47=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
-ID48=TVirtualTreeColumns.Equals@TVirtualTreeColumns
-ID49=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
-ID5=TBaseVirtualTree.FNodeMemoryManager
-ID50=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
-ID51=TVTHeader.FLeftTrackPos
-ID52=TVTHeaderStyle.hsXPStyle
-ID53=TVTNodeMemoryManager
-ID54=TVTNodeMemoryManager.AllocNode@Cardinal
-ID55=TVTNodeMemoryManager.Clear
-ID56=TVTNodeMemoryManager.FAllocSize
-ID57=TVTNodeMemoryManager.FBlockList
-ID58=TVTNodeMemoryManager.FBytesAvailable
-ID59=TVTNodeMemoryManager.FFreeSpace
-ID6=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
-ID60=TVTNodeMemoryManager.FNext
-ID61=TVTNodeMemoryManager.FreeNode@PVirtualNode
-ID7=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
-ID8=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
-ID9=TBaseVirtualTree.GetImageIndex@PVirtualNode@TVTImageKind@TColumnIndex@Boolean
+ID10=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
+ID11=TBaseVirtualTree.FNodeMemoryManager
+ID12=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
+ID13=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
+ID14=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID15=TBaseVirtualTree.GetImageIndex@PVirtualNode@TVTImageKind@TColumnIndex@Boolean
+ID16=TBaseVirtualTree.GetLast@PVirtualNode
+ID17=TBaseVirtualTree.GetLastInitialized@PVirtualNode
+ID18=TBaseVirtualTree.GetLastNoInit@PVirtualNode
+ID19=TBaseVirtualTree.GetLastVisible@PVirtualNode
+ID2=PByte
+ID20=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
+ID21=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
+ID22=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
+ID23=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
+ID24=TBaseVirtualTree.GetNext@PVirtualNode
+ID25=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID26=TBaseVirtualTree.GetNextInitialized@PVirtualNode
+ID27=TBaseVirtualTree.GetNextNoInit@PVirtualNode
+ID28=TBaseVirtualTree.GetNextSelected@PVirtualNode
+ID29=TBaseVirtualTree.GetNextVisible@PVirtualNode
+ID3=PClipboardFormatListEntry
+ID30=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
+ID31=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
+ID32=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
+ID33=TBaseVirtualTree.GetPrevious@PVirtualNode
+ID34=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
+ID35=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
+ID36=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
+ID37=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
+ID38=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
+ID39=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
+ID4=PSHDragImage
+ID40=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
+ID41=TBaseVirtualTree.GetVisibleParent@PVirtualNode
+ID42=TBufferedString
+ID43=TCheckImageKind.ckSystem
+ID44=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
+ID45=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
+ID46=THeaderState.hsTracking
+ID47=THeaderState.hsTrackPending
+ID48=TOldVTOption
+ID49=TToggleAnimationData.Expand
+ID5=PVTHintData
+ID50=TToggleAnimationData.R
+ID51=TVirtualTreeCast
+ID52=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
+ID53=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
+ID54=TVirtualTreeColumns.Equals@TVirtualTreeColumns
+ID55=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
+ID56=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
+ID57=TVTHeader.FLeftTrackPos
+ID58=TVTHeaderStyle.hsXPStyle
+ID59=TVTNodeMemoryManager
+ID6=PVTReference
+ID60=TVTNodeMemoryManager.AllocNode@Cardinal
+ID61=TVTNodeMemoryManager.Clear
+ID62=TVTNodeMemoryManager.FAllocSize
+ID63=TVTNodeMemoryManager.FBlockList
+ID64=TVTNodeMemoryManager.FBytesAvailable
+ID65=TVTNodeMemoryManager.FFreeSpace
+ID66=TVTNodeMemoryManager.FNext
+ID67=TVTNodeMemoryManager.FreeNode@PVirtualNode
+ID7=PVTVirtualNodeEnumeration
+ID8=TBaseVirtualTree.AfterConstruction
+ID9=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
 
 [Configurations\Configuration 4\Enabled Topics]
 Count=4
@@ -49260,69 +49278,75 @@ BodySourceUseAutolinking=1
 BodySourceUseSyntaxHighlight=1
 
 [Configurations\Configuration 6\Disabled Topics]
-Count=62
+Count=68
 ID0=!!GLOSSARY
 ID1=DrawTextW@HDC@PWideChar@Integer@TRect@Cardinal@Boolean
-ID10=TBaseVirtualTree.GetLast@PVirtualNode
-ID11=TBaseVirtualTree.GetLastInitialized@PVirtualNode
-ID12=TBaseVirtualTree.GetLastNoInit@PVirtualNode
-ID13=TBaseVirtualTree.GetLastVisible@PVirtualNode
-ID14=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
-ID15=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
-ID16=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
-ID17=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
-ID18=TBaseVirtualTree.GetNext@PVirtualNode
-ID19=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID10=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
+ID11=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
+ID12=TBaseVirtualTree.FNodeMemoryManager
+ID13=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
+ID14=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
+ID15=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID16=TBaseVirtualTree.GetLast@PVirtualNode
+ID17=TBaseVirtualTree.GetLastInitialized@PVirtualNode
+ID18=TBaseVirtualTree.GetLastNoInit@PVirtualNode
+ID19=TBaseVirtualTree.GetLastVisible@PVirtualNode
 ID2=Introduction PDF
-ID20=TBaseVirtualTree.GetNextInitialized@PVirtualNode
-ID21=TBaseVirtualTree.GetNextNoInit@PVirtualNode
-ID22=TBaseVirtualTree.GetNextSelected@PVirtualNode
-ID23=TBaseVirtualTree.GetNextVisible@PVirtualNode
-ID24=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
-ID25=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
-ID26=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
-ID27=TBaseVirtualTree.GetPrevious@PVirtualNode
-ID28=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
-ID29=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
-ID3=TBaseVirtualTree.AfterConstruction
-ID30=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
-ID31=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
-ID32=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
-ID33=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
-ID34=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
-ID35=TBaseVirtualTree.GetVisibleParent@PVirtualNode
-ID36=TBufferedString
-ID37=TCheckImageKind.ckSystem
-ID38=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
-ID39=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
-ID4=TBaseVirtualTree.DoGetNodeHint@PVirtualNode@TColumnIndex
-ID40=THeaderState.hsTracking
-ID41=THeaderState.hsTrackPending
-ID42=TOldVTOption
-ID43=TToggleAnimationData.Expand
-ID44=TToggleAnimationData.R
-ID45=TVirtualTreeCast
-ID46=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
-ID47=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
-ID48=TVirtualTreeColumns.Equals@TVirtualTreeColumns
-ID49=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
-ID5=TBaseVirtualTree.DoGetNodeTooltip@PVirtualNode@TColumnIndex
-ID50=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
-ID51=TVTHeader.FLeftTrackPos
-ID52=TVTHeaderStyle.hsXPStyle
-ID53=TVTNodeMemoryManager
-ID54=TVTNodeMemoryManager.AllocNode@Cardinal
-ID55=TVTNodeMemoryManager.Clear
-ID56=TVTNodeMemoryManager.FAllocSize
-ID57=TVTNodeMemoryManager.FBlockList
-ID58=TVTNodeMemoryManager.FBytesAvailable
-ID59=TVTNodeMemoryManager.FFreeSpace
-ID6=TBaseVirtualTree.FNodeMemoryManager
-ID60=TVTNodeMemoryManager.FNext
-ID61=TVTNodeMemoryManager.FreeNode@PVirtualNode
-ID7=TBaseVirtualTree.GetDisplayRect@PVirtualNode@TColumnIndex@Boolean@Boolean
-ID8=TBaseVirtualTree.GetFirstVisibleChild@PVirtualNode
-ID9=TBaseVirtualTree.GetFirstVisibleChildNoInit@PVirtualNode
+ID20=TBaseVirtualTree.GetLastVisibleChild@PVirtualNode
+ID21=TBaseVirtualTree.GetLastVisibleChildNoInit@PVirtualNode
+ID22=TBaseVirtualTree.GetLastVisibleNoInit@PVirtualNode
+ID23=TBaseVirtualTree.GetMaxColumnWidth@TColumnIndex
+ID24=TBaseVirtualTree.GetNext@PVirtualNode
+ID25=TBaseVirtualTree.GetNextCutCopy@PVirtualNode
+ID26=TBaseVirtualTree.GetNextInitialized@PVirtualNode
+ID27=TBaseVirtualTree.GetNextNoInit@PVirtualNode
+ID28=TBaseVirtualTree.GetNextSelected@PVirtualNode
+ID29=TBaseVirtualTree.GetNextVisible@PVirtualNode
+ID3=PByte
+ID30=TBaseVirtualTree.GetNextVisibleNoInit@PVirtualNode
+ID31=TBaseVirtualTree.GetNextVisibleSibling@PVirtualNode
+ID32=TBaseVirtualTree.GetNextVisibleSiblingNoInit@PVirtualNode
+ID33=TBaseVirtualTree.GetPrevious@PVirtualNode
+ID34=TBaseVirtualTree.GetPreviousInitialized@PVirtualNode
+ID35=TBaseVirtualTree.GetPreviousNoInit@PVirtualNode
+ID36=TBaseVirtualTree.GetPreviousVisible@PVirtualNode
+ID37=TBaseVirtualTree.GetPreviousVisibleNoInit@PVirtualNode
+ID38=TBaseVirtualTree.GetPreviousVisibleSibling@PVirtualNode
+ID39=TBaseVirtualTree.GetPreviousVisibleSiblingNoInit@PVirtualNode
+ID4=PClipboardFormatListEntry
+ID40=TBaseVirtualTree.GetTextInfo@PVirtualNode@TColumnIndex@TFont@TRect@WideString
+ID41=TBaseVirtualTree.GetVisibleParent@PVirtualNode
+ID42=TBufferedString
+ID43=TCheckImageKind.ckSystem
+ID44=TCustomVirtualStringTree.ContentToHTML@TVSTTextSourceType@WideString
+ID45=TCustomVirtualStringTree.ContentToText@TVSTTextSourceType@Char
+ID46=THeaderState.hsTracking
+ID47=THeaderState.hsTrackPending
+ID48=TOldVTOption
+ID49=TToggleAnimationData.Expand
+ID5=PSHDragImage
+ID50=TToggleAnimationData.R
+ID51=TVirtualTreeCast
+ID52=TVirtualTreeColumn.ComputeHeaderLayout@HDC@TRect@Boolean@Boolean@TPoint@TPoint@TRect
+ID53=TVirtualTreeColumns.DrawXPButton@HDC@TRect@Boolean@Boolean@Boolean
+ID54=TVirtualTreeColumns.Equals@TVirtualTreeColumns
+ID55=TVirtualTreeColumns.GetNextVisibleColumn@TColumnIndex
+ID56=TVirtualTreeColumns.GetPreviousVisibleColumn@TColumnIndex
+ID57=TVTHeader.FLeftTrackPos
+ID58=TVTHeaderStyle.hsXPStyle
+ID59=TVTNodeMemoryManager
+ID6=PVTHintData
+ID60=TVTNodeMemoryManager.AllocNode@Cardinal
+ID61=TVTNodeMemoryManager.Clear
+ID62=TVTNodeMemoryManager.FAllocSize
+ID63=TVTNodeMemoryManager.FBlockList
+ID64=TVTNodeMemoryManager.FBytesAvailable
+ID65=TVTNodeMemoryManager.FFreeSpace
+ID66=TVTNodeMemoryManager.FNext
+ID67=TVTNodeMemoryManager.FreeNode@PVirtualNode
+ID7=PVTReference
+ID8=PVTVirtualNodeEnumeration
+ID9=TBaseVirtualTree.AfterConstruction
 
 [Configurations\Configuration 6\Enabled Topics]
 Count=4
@@ -53048,7 +53072,7 @@ Title=Virtual Treeview
 TypeDefStructsAsStructs=1
 VersionBuild=0
 VersionMajor=5
-VersionMinor=3
+VersionMinor=0
 VersionRelease=0
 
 [Generic Sources]
